2_simple_example/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hello-world
  labels:
    app: nginx-hello-world
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
