2_simple_example/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-world-service
spec:
  selector:
    app: nginx-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
